--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -29,13 +29,8 @@ tests:
   - python:
       imports:
         - IPy
-      python_version: ${{ python_min }}.*
-  - requirements:
-      run:
-        - pip
-        - python ${{ python_min }}.*
-    script:
-      - pip check
+      python_version: ["${{ python_min }}.*", "3.*"]
+      pip_check: true
 
 about:
   summary: Class and tools for handling of IPv4 and IPv6 addresses and networks
